<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_alert">Thank you for using this application.\10\10 Created and developed by Burning Vigor Software.\10</string>
    <string name="about_alert1">Thank you for using this application.\10\10 Created and developed by Burning Vigor Software.\10</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Weather Monkey APRS</string>
    <string name="aprs_net">APRS Network 1</string>
    <string name="aprs_net2">rotate.aprs.net</string>
    <string name="aprs_net3">APRS Network 2</string>
    <string name="aprs_net4">rotate.aprs2.net</string>
    <string name="bar_press">Bar Pressure : </string>
    <string name="help_alert">Get weather updates using APRS (Automatic Packet Reporting System), popular with Amateur Radio.\10\10 1. Must input a Callsign or unique ID to connect to weather server.\10 2. Choose a location for weather updates.\10 3. Select an APRS weather server to receive reports.\10 4. Select coverage radius to filter weather reports.\10</string>
    <string name="help_alert1">View this thread for weather updates.\10\10 If no weather data displays but busy icon is spinning:\10 1. Application needs active public network connection (e.g. Wi-fi) to work.\10 2. Wait a short time, weather server may be busy.\10 3. Click [Back] to select an alternate server.\10 4. Click [Cancel] then [Connect] to restart thread.\10 5. Close the application completely and restart.\10</string>
    <string name="hint_callsign">Enter Callsign or ID</string>
    <string name="humidity">Humidity : </string>
    <string name="location_select">Select Location</string>
    <string name="map_explain">TIPS :\10 1. Swipe to move map.\10 2. Touch map to add lat and long values.\10 3. Touch lat and long fields to directly edit values.\10 </string>
    <string name="radius1">700 meters</string>
    <string name="radius2">500 meters</string>
    <string name="radius3">300 meters</string>
    <string name="radius4">1000 meters</string>
    <string name="radius_select">Select Coverage Radius</string>
    <string name="rain_hour">Rain Hour : </string>
    <string name="rain_midnight">Rain Night : </string>
    <string name="reporter">Reporter : </string>
    <string name="server_select">Select Weather Server</string>
    <string name="settings_alert">Settings are disabled.</string>
    <string name="settings_alert1">Settings are disabled.</string>
    <string name="temp">Temperature : </string>
    <string name="test_string">Test label for Second Activity</string>
    <string name="time_stamp">Time Stamp : </string>
    <string name="title_activity_second">Weather Report</string>
    <string name="title_lat">Latitude : </string>
    <string name="title_long">Longitude : </string>
    <string name="title_map">\9Map Monkey - swipe to move</string>
    <string name="uah_net">University of AL Huntsville Blackhawk</string>
    <string name="uah_net2">blackhawk.ece.uah.edu</string>
    <string name="wind_dir">Wind Direct : </string>
    <string name="wind_gust">Wind Gust : </string>
    <string name="wind_spd">Wind Speed : </string>
</resources>
