<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:id="@+id/parent" android:background="@drawable/monkey_banana_weather_512" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <ImageView android:id="@+id/txtStart" android:background="@drawable/wooden_plank_intro_06" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="35dp" android:layout_alignParentTop="true" android:layout_centerHorizontal="true"/>
        <EditText android:id="@+id/txtCallsign" android:background="#ffffff" android:padding="7dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="35dp" android:hint="@string/hint_callsign" android:singleLine="true" android:maxLength="6" android:digits="abcdefghijklmnopqrstuvwxyz1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ" android:layout_below="@+id/txtStart" android:inputType="text"/>
        <TextView android:textColor="#ffff00" android:id="@+id/txtLocale" android:background="#008000" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/location_select" android:layout_below="@+id/txtCallsign"/>
        <Spinner android:id="@+id/spinLocale" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="35dp" android:layout_below="@+id/txtLocale"/>
        <TextView android:textColor="#ffff00" android:id="@+id/txtWeather" android:background="#008000" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/server_select" android:layout_below="@+id/spinLocale"/>
        <RadioGroup android:orientation="vertical" android:id="@+id/rdbGp1" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="35dp" android:layout_below="@+id/txtWeather" android:onClick="getServerSelection">
            <RadioButton android:id="@+id/rdb1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aprs_net"/>
            <TextView android:textColor="#000000" android:id="@+id/txtaprs1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="45dp" android:layout_marginBottom="7dp" android:text="@string/aprs_net2" android:layout_below="@+id/rdb1"/>
            <RadioButton android:id="@+id/rdb2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/aprs_net3" android:layout_below="@+id/txtaprs1"/>
            <TextView android:textColor="#000000" android:id="@+id/txtaprs2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="45dp" android:layout_marginBottom="7dp" android:text="@string/aprs_net4" android:layout_below="@+id/rdb2"/>
            <RadioButton android:id="@+id/rdb3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/uah_net" android:layout_below="@+id/txtaprs2"/>
            <TextView android:textColor="#000000" android:id="@+id/txtuah" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="45dp" android:layout_marginBottom="7dp" android:text="@string/uah_net2" android:layout_below="@+id/rdb3"/>
        </RadioGroup>
        <TextView android:textColor="#ffff00" android:id="@+id/txtradius" android:background="#008000" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/radius_select" android:layout_below="@+id/rdbGp1"/>
        <RadioGroup android:orientation="vertical" android:id="@+id/rdbGp2" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="20dp" android:layout_below="@+id/txtradius" android:onClick="getRadiusSelection">
            <RadioButton android:id="@+id/rdb4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="7dp" android:text="@string/radius4"/>
            <RadioButton android:id="@+id/rdb5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="7dp" android:text="@string/radius1" android:layout_below="@+id/rdb4"/>
            <RadioButton android:id="@+id/rdb6" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="7dp" android:text="@string/radius2" android:layout_below="@+id/rdb5"/>
            <RadioButton android:id="@+id/rdb7" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="7dp" android:text="@string/radius3" android:layout_below="@+id/rdb6"/>
        </RadioGroup>
        <Button android:id="@+id/btnProceed" android:background="@drawable/banana_click" android:layout_width="120dp" android:layout_height="60dp" android:layout_below="@+id/rdbGp2" android:onClick="onClick"/>
    </RelativeLayout>
</ScrollView>
