<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:background="@drawable/monkey_party_back_512" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:id="@+id/btnBack" android:background="@drawable/banana_back" android:layout_width="120dp" android:layout_height="60dp" android:layout_marginLeft="55dp" android:layout_marginBottom="25dp" android:layout_alignParentTop="true" android:onClick="onConnect">
            <requestFocus/>
        </Button>
        <TextView android:textColor="#ffff00" android:id="@+id/txtView1" android:background="#008000" android:padding="5dp" android:layout_width="105dp" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/reporter" android:layout_below="@+id/btnBack"/>
        <TextView android:textColor="#000000" android:id="@+id/txtReport" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:hint="Reporting Callsign" android:singleLine="true" android:layout_toRightOf="@+id/txtView1" android:layout_below="@+id/btnBack"/>
        <TextView android:textColor="#ffff00" android:id="@+id/txtView2" android:background="#008000" android:padding="5dp" android:layout_width="105dp" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/time_stamp" android:layout_below="@+id/txtView1"/>
        <TextView android:textColor="#000000" android:id="@+id/txtTime" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:hint="Time Stamp or Coordinate Position" android:singleLine="true" android:layout_toRightOf="@+id/txtView2" android:layout_below="@+id/txtReport"/>
        <TextView android:textColor="#ffff00" android:id="@+id/txtView3" android:background="#008000" android:padding="5dp" android:layout_width="105dp" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/temp" android:layout_weight="1" android:layout_below="@+id/txtView2"/>
        <TextView android:textColor="#000000" android:id="@+id/txtTemp" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:hint="Temperature - Fahrenheit" android:singleLine="true" android:layout_toRightOf="@+id/txtView3" android:layout_below="@+id/txtTime"/>
        <TextView android:textColor="#ffff00" android:id="@+id/txtView4" android:background="#008000" android:padding="5dp" android:layout_width="105dp" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/wind_gust" android:layout_below="@+id/txtView3"/>
        <TextView android:textColor="#000000" android:id="@+id/txtWGust" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:hint="Wind Gust (mph)" android:singleLine="true" android:layout_toRightOf="@+id/txtView4" android:layout_below="@+id/txtTemp"/>
        <TextView android:textColor="#ffff00" android:id="@+id/txtView10" android:background="#008000" android:padding="5dp" android:layout_width="105dp" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/wind_spd" android:layout_below="@+id/txtView4"/>
        <TextView android:textColor="#000000" android:id="@+id/txtWSpeed" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:hint="Wind Speed (mph)" android:singleLine="true" android:layout_toRightOf="@+id/txtView10" android:layout_below="@+id/txtWGust"/>
        <TextView android:textColor="#ffff00" android:id="@+id/txtView5" android:background="#008000" android:padding="5dp" android:layout_width="105dp" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/wind_dir" android:layout_below="@+id/txtView10"/>
        <TextView android:textColor="#000000" android:id="@+id/txtWDirection" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:hint="Wind Direction (degrees)" android:singleLine="true" android:layout_toRightOf="@+id/txtView5" android:layout_below="@+id/txtWSpeed"/>
        <TextView android:textColor="#ffff00" android:id="@+id/txtView6" android:background="#008000" android:padding="5dp" android:layout_width="105dp" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/bar_press" android:layout_below="@+id/txtView5"/>
        <TextView android:textColor="#000000" android:id="@+id/txtBPressure" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:hint="Barometric Pressure" android:singleLine="true" android:layout_toRightOf="@+id/txtView6" android:layout_below="@+id/txtWDirection"/>
        <TextView android:textColor="#ffff00" android:id="@+id/txtView7" android:background="#008000" android:padding="5dp" android:layout_width="105dp" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/humidity" android:layout_below="@+id/txtView6"/>
        <TextView android:textColor="#000000" android:id="@+id/txtHumidity" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:hint="Humidity (percentage)" android:singleLine="true" android:layout_toRightOf="@+id/txtView7" android:layout_below="@+id/txtBPressure"/>
        <TextView android:textColor="#ffff00" android:id="@+id/txtView8" android:background="#008000" android:padding="5dp" android:layout_width="105dp" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/rain_hour" android:layout_below="@+id/txtView7"/>
        <TextView android:textColor="#000000" android:id="@+id/txtRainHour" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:hint="Rainfall Last Hour (1/100 inch)" android:singleLine="true" android:layout_toRightOf="@+id/txtView8" android:layout_below="@+id/txtHumidity"/>
        <TextView android:textColor="#ffff00" android:id="@+id/txtView9" android:background="#008000" android:padding="5dp" android:layout_width="105dp" android:layout_height="wrap_content" android:layout_marginBottom="5dp" android:text="@string/rain_midnight" android:layout_below="@+id/txtView8"/>
        <TextView android:textColor="#000000" android:id="@+id/txtRainNight" android:background="#ffff00" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="25dp" android:hint="Rainfall Since Midnight (1/100 inch)" android:singleLine="true" android:layout_toRightOf="@+id/txtView9" android:layout_below="@+id/txtRainHour"/>
        <Button android:id="@+id/btnConnect" android:background="@drawable/banana_connect" android:layout_width="120dp" android:layout_height="60dp" android:layout_marginRight="35dp" android:layout_below="@+id/txtRainNight" android:onClick="onConnect"/>
        <Button android:id="@+id/btnCancel" android:background="@drawable/banana_cancel" android:layout_width="120dp" android:layout_height="60dp" android:layout_toRightOf="@+id/btnConnect" android:layout_below="@+id/txtRainNight" android:onClick="onConnect"/>
        <ProgressBar android:id="@+id/progBar" android:layout_width="128dp" android:layout_height="128dp" android:indeterminateDrawable="@drawable/monkey_show" android:layout_below="@+id/btnCancel" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true"/>
    </RelativeLayout>
</ScrollView>
